modified index.js, index.scss for the header component to fix overflow issue now is more responsive for smaller screens

--- a/client/src/components/Header/index.scss
+++ b/client/src/components/Header/index.scss
@@ -4,48 +4,57 @@
     padding:0;
   }
 
+  nav {
+    display: inline-block;
+
+}
+
 .nav-bar {
     display:flex;
     background: #f54242;
-    width: 100%;
-    height: 70px;
+    // width: 100%;
+    // height: 70px;
     // position: relative;
     top: 0;
     z-index: 3;
-    min-width: 100%;
+    // min-width: 100%;
     opacity: 0.8;
 
 
     .parent {
         border: solid blue 5px;
-        width: calc(100% - 20px);
+        // width: calc(100% - 20px);
+        width: 100%;
         height: 70px;
         /* Aligns the children items in a row direction */
         display: flex;
+        justify-content: space-between;
+        gap: 2rem;
+        padding: 0 1rem;
+
         // position: relative;
         
     }
     .profileLogo {
         // position: absolute;
         border: solid yellow 5px;
-        width: 100px;
-        height: 100px;
+        // width: 100px;
+        // height: 100px;
         display: flex;
+        justify-content: center;
+        align-items: center;
 
     }
 
     .settingsLogo {
         // position: absolute;
         border: solid green 5px;
-        width: 100px;
-        height: 100px;
+        width: 10%;
+        // height: 100px;
         display: flex;
-        margin-left: 800px;
+        justify-content: center;
+        align-items: center;
+        // margin-left: 800px;
 
-    }
-
-    nav {
-        display: inline-block;
-    
     }
 }
